objects/Task_History__c.object
<CustomObject>
    <description>This Custom object is to track the changes done on certain fields in Task object.</description>
    <fields>
        <fullName>New_Acitivity__c</fullName>
        <description>New Acitivity</description>
        <label>New Acitivity</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Activity_Type__c</fullName>
        <label>New Activity Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Comments__c</fullName>
        <label>New Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>New_Contact__c</fullName>
        <label>New Contact</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Owner__c</fullName>
        <label>New Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Purpose__c</fullName>
        <label>New Purpose</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Regarding__c</fullName>
        <label>New Regarding</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Related_To__c</fullName>
        <label>New Related To</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Result__c</fullName>
        <label>New Result</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Activity_Type__c</fullName>
        <label>Old Activity Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Activity__c</fullName>
        <label>Old Activity</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Comments__c</fullName>
        <description>Description Field</description>
        <label>Old Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Old_Contact__c</fullName>
        <description>WhoId Field</description>
        <label>Old Contact</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Owner__c</fullName>
        <description>Owner Id Field</description>
        <label>Old Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Purpose__c</fullName>
        <label>Old Purpose</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Regarding__c</fullName>
        <description>Subject Field</description>
        <label>Old Regarding</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Related_To__c</fullName>
        <description>WhatId Field</description>
        <label>Old Related To</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Result__c</fullName>
        <label>Old Result</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_ID__c</fullName>
        <label>Task ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Task History</label>
    <nameField>
        <displayFormat>TH-{0000000}</displayFormat>
        <label>Task History ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>